--- a/cmd.info.binary.LegrandPriseCeliane.html
+++ b/cmd.info.binary.LegrandPriseCeliane.html
@@ -1,11 +1,11 @@
 <div style="width:42px;min-height:42px;" class="cmd cmd-widget #history# tooltips" data-type="info" data-subtype="binary" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" title="#collectDate#">
 	<!-- Info Widget
-		Créer par   : JAG
+		Créer par   	: JAG
 		Basé sur	: LegrandPriseCeliane "Dashboard LegrandPriseCeliane" de ksoul78
-		Mise à jour : JAG 20190127 11:00
+		Mise à jour 	: JAG 20190317 : ajout centrer widget (merci à Antoinekl1)
 	-->   
   	<center>
-    	<span class="cmdName" id="cmdName#id#" style="font-weight: bold;font-size : 10px; #hideCmdName#;">#name_display#</span>
+    		<span class="cmdName" id="cmdName#id#" style="font-weight: bold;font-size : 10px; #hideCmdName#;">#name_display#</span>
 		<span style="font-size: 1.1em;" class="iconCmd#uid#"></span>
 	</center>
 	<script>
