--- a/cmd.info.binary.LegrandPriseCeliane.html
+++ b/cmd.info.binary.LegrandPriseCeliane.html
@@ -15,7 +15,7 @@
                         var srcImglogoON_M      = ('#logoON-M#'!='#'+'logoON-M#') ? "#logoON-M#" : "legrand-prise-on";
                         var srcImglogoON_M_T    = ('#logoON_type-M#'!='#'+'logoON_type-M#') ? "#logoON_type-M#" : "png";
                 // Valeur pour OFF ou 0
-                        var srcImglogoOFF_M     = ('#logoOFF-M#'!='#'+'logoOFF-M#') ? "#logoOFF#" : "legrand-prise-off";
+                        var srcImglogoOFF_M     = ('#logoOFF-M#'!='#'+'logoOFF-M#') ? "#logoOFF-M#" : "legrand-prise-off";
                         var srcImglogoOFF_M_T   = ('#logoOFF_type-M#'!='#'+'logoOFF_type-M#') ? "#logoOFF_type-M#" : "png";
                 // Paramètrage du logo pour Erreur
                         var srcImglogoER_M	    = ('#logoER_M#'!='#'+'logoER_M#') ? "#logoER_M#": "oups";
