--- a/cmd.info.binary.LegrandPriseCeliane.html
+++ b/cmd.info.binary.LegrandPriseCeliane.html
@@ -1,4 +1,4 @@
-<div style="width:90px;height:100%;vertical-align: top;" class="cmd tooltips cmd-widget cursor #history#" data-type="info" data-subtype="binary" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" title="#collectDate#">
+<div style="width:90px;height:100%;vertical-align: top;" class="cmd" data-type="info" data-subtype="binary" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" title="#collectDate#">
   	<!-- Info Widget
         Basé sur les widget de  : LegrandPriseCeliane "Dashboard LegrandPriseCeliane" de ksoul78
         Mise à jour				: JAG 20190527 : Correction code pour V4
