--- a/cmd.info.binary.LegrandPriseCeliane.html
+++ b/cmd.info.binary.LegrandPriseCeliane.html
@@ -7,6 +7,10 @@
         <div class="content-xs" style="#hideCmdName#">#name_display#</div>
         <span class="iconCmd#id#" title="#name#"></span>
     </center>
+    <center>
+        <div class="content-xs" style="#hideCmdName#">#name_display#</div>
+        <span class="iconCmd#id#" title="#name#"></span>
+    </center>
     <script>
         jeedom.cmd.update['#id#'] = function(_options){
             // Options de personnalisation avec valeur par defaut
